# llm-code-assist

./: .gitignore  LICENSE  MetadataStoreInterface_first_code.cpp  MetadataStoreInterface_first_code.go  MetadataStoreInterface_first_code.py  MetadataStoreInterface_first_code.rs  MetadataStoreInterface_first_impl.py  MetadataStoreInterface_first_plan.toml  MetadataStore_first_impl.py  README.md  main.py  metadata_store.py  pyproject.toml  requirements.txt  run_api.py  run_live.py  spec_parser.py  swe-bench-tasks.jsonl  swebench-lite-dev.csv
architect/: api.py
code_assistant/: assistant_prompts.py  planner_prompts.py  pseudocoder_prompts.py  spec_parser.py  spec_planner.py  spec_pseudocoder.py  spec_transpiler.py  spec_unit_test_generator.py  transpiler_prompts.py
common/: cache.py  handles.py  language_model.py  prompting_patterns.py  text_search.py  util.py
compiler-work/: build.md  code_debugger_agent.py  code_generator_agent.py  compiler.py  test_generator_agent.py
compiler-work/src/: go.mod  main.go
configs/: main.toml
configs/schemas/: cache.sql  sysgen.sql  text_search.sql
configs/specs/: api_spec.md
db-work/: code_debugger_agent.py  code_generator_agent.py  ignore-files.txt  prompt.txt  recommender_agent.py
db-work/chromadb/: chroma.sqlite3
db-work/code-inputs/: prompt-0.txt  prompt-1.txt  prompt-2.txt
db-work/code-outputs/: codegen-1.txt  codegen-2.txt
db-work/debug-inputs/: prompt-0.txt  prompt-1.txt  prompt-2.txt  (+4 more)
harness/: context_manager.py  engine_evaluation.py  engine_validation.py  run_evaluation.py  utils.py
output/: gpt-3.5-turbo__style-3__2024-06-19_11-51-28.jsonl
(+31 files in other folders)
